--- a/single-spa/src/index.ejs
+++ b/single-spa/src/index.ejs
@@ -29,7 +29,9 @@
       "imports": {
         "@mc/root-config":  "//localhost:9000/mc-root-config.js",
         "@mc/react-single": "//localhost:8500/mc-react-single.js",
-        "@mc/react-multiples": "//localhost:8500/mc-react-multiples.js"
+        "@mc/react-multiples": "//localhost:8500/mc-react-multiples.js",
+        "@mc/react-parcel": "//localhost:8501/mc-react-parcel.js",
+        "@mc/react-route": "//localhost:8500/mc-react-route.js"
       }
     }
   </script>
