feat: add os eventos do utils

--- a/single-spa/src/index.ejs
+++ b/single-spa/src/index.ejs
@@ -31,7 +31,8 @@
         "@mc/react-single": "//localhost:8500/mc-react-single.js",
         "@mc/react-multiples": "//localhost:8500/mc-react-multiples.js",
         "@mc/react-parcel": "//localhost:8501/mc-react-parcel.js",
-        "@mc/react-route": "//localhost:8500/mc-react-route.js"
+        "@mc/react-route": "//localhost:8500/mc-react-route.js",
+        "@mc/utils": "//localhost:8600/mc-utils.js"
       }
     }
   </script>
