feat: add lazy load

--- a/single-spa/src/index.ejs
+++ b/single-spa/src/index.ejs
@@ -32,6 +32,7 @@
         "@mc/react-multiples": "//localhost:8500/mc-react-multiples.js",
         "@mc/react-parcel": "//localhost:8501/mc-react-parcel.js",
         "@mc/react-route": "//localhost:8500/mc-react-route.js",
+        "@mc/react-lazy": "//localhost:8500/mc-react-lazy.js",
         "@mc/utils": "//localhost:8600/mc-utils.js"
       }
     }
